[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/effects/portals/PortalPair.gd" type="Script" id=1]
[ext_resource path="res://entities/effects/portals/Portal.tscn" type="PackedScene" id=2]

[sub_resource type="Shader" id=1]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;
uniform sampler2D texture_albedo : hint_albedo;

void vertex() {
}

void fragment() {
	vec2 base_uv = SCREEN_UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
}
"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;
uniform sampler2D texture_albedo : hint_albedo;

void vertex() {
}

void fragment() {
	vec2 base_uv = SCREEN_UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = albedo_tex.rgb;
}
"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )

[node name="PortalPair" type="Spatial"]
script = ExtResource( 1 )

[node name="PortalA" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Camera" parent="PortalA/Viewport" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="MeshInstance" parent="PortalA" index="2"]
material_override = SubResource( 2 )

[node name="PortalB" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="Camera" parent="PortalB/Viewport" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="MeshInstance" parent="PortalB" index="2"]
material_override = SubResource( 4 )
[connection signal="body_exited" from="PortalA/Area" to="." method="_on_portal_a_body_exited"]
[connection signal="body_exited" from="PortalB/Area" to="." method="_on_portal_b_body_exited"]

[editable path="PortalA"]

[editable path="PortalB"]
